--- a/login.html
+++ b/login.html
@@ -18,10 +18,10 @@
 
     <section class="header">
         <nav>
-            <a href="home.html"><img src="https://eduford.mhjohn.com/image/logo.png"></a>
+            <a href="index.html"><img src="https://eduford.mhjohn.com/image/logo.png"></a>
             <div class="nav-links">
                 <ul>
-                    <li><a href="home.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="course.html">Course</a></li>
                     <li><a href="login.html">Log In</a></li>
                     <li><a href="signup.html">Sign Up</a></li>
